[gd_scene load_steps=5 format=2]

[ext_resource path="res://Minigames/Balloon Game/Sprites/Reticle.png" type="Texture" id=1]
[ext_resource path="res://Minigames/Balloon Game/Dart.gd" type="Script" id=2]
[ext_resource path="res://Minigames/Balloon Game/Sounds/Dart_Hit.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 7.03498

[node name="DartThrower" type="Node2D"]
script = ExtResource( 2 )

[node name="Reticle" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="DartArea" type="Area2D" parent="Reticle"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Reticle/DartArea"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="DartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="Reticle/DartArea" to="." method="_on_DartArea_area_entered"]
[connection signal="area_exited" from="Reticle/DartArea" to="." method="_on_DartArea_area_exited"]
